<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhatsToDo</string>
    <string name="menu_settings">Settings</string>
    <string name="newList">Neu</string>
    <string name="listName">Neue Liste</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="newTask">Neue Aufgabe</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_options_test">OptionsTest</string>

    <string-array name="menu">
        <item>Bearbeiten</item>
        <item>Löschen</item>
        <item>Kopieren</item>
        <item>Einfügen</item>
    </string-array>

    <string name="footer">Fusszeile</string>
    <string name="cancel">Abbrechen</string>
    <string name="save">Speichern</string>
    <string name="notice">Notiz</string>
    <string name="date">Fälligkeitsdatum</string>
    <string name="memory">Erinnerung</string>
    <string name="list">Liste</string>
    <string name="priority">Priorität</string>
    <string name="task"> Aufgabe</string>
    <string name="details"> Details</string>
    <string name="textView">TextView</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="reminderDate">Datum</string>
    <string name="reminderTime">Zeit</string>
    <string name="reminder"> Erinnerung</string>
    <string name="position">Adresse</string>
    <string name="kalender_eintrag">Kalender Eintrag</string>
    <string name="today">Heute</string>
    <string name="tomorrow">Morgen</string>
    <string name="allTasks">Alle Aufgaben</string>
    <string name="nextDays">Nächste 7 Tage</string>
    <string name="withoutDate">Ohne Datum</string>
    <string name="late">Überfällig</string>
    <string name="highPriority">Hohe Priorität</string>
    <string name="normalPriority">Normale Priorität</string>
    <string name="lowPriority">Niedrige Priorität</string>
    <string name="title_activity_sync_settings">SyncSettingsActivity</string>
    <string name="settingsUserName">Username</string>
    <string name="settingsServerIP">Server-IP</string>
    <string name="settingsServerPort">Server-Port</string>

</resources>